Implementing LLM for question generation and modification